issue:contact.html page, on small sized browsers the scroll wouldn't go far enough to show the submit button on the form, Solution: <div class=content-area> bottom margin adjustment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ a {
 	width:960px;
 	position:absolute;
 	left:200px;
-	margin-bottom:20px;
+	margin-bottom:80px;
 	overflow: hidden;
 }
 
